[gd_scene load_steps=5 format=3 uid="uid://d0564djdkh2do"]

[ext_resource type="Script" path="res://scenes/structures/structure.gd" id="1_34bv7"]
[ext_resource type="Texture2D" uid="uid://cddfbhrvw4mgx" path="res://assets/laserRed01.png" id="2_k3etx"]
[ext_resource type="Texture2D" uid="uid://dhvmmi13eggqo" path="res://assets/selection_circle.png" id="3_yy407"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fricf"]
radius = 16.0

[node name="structure" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_34bv7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_fricf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_k3etx")

[node name="BuildTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_fricf")

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]
radius = 16.0
avoidance_layers = 2

[node name="SelectionIndicator" type="Sprite2D" parent="."]
visible = false
scale = Vector2(1.25, 1.25)
texture = ExtResource("3_yy407")

[node name="MaintenanceTimer" type="Timer" parent="."]

[connection signal="timeout" from="BuildTimer" to="." method="_on_build_timer_timeout"]
[connection signal="timeout" from="MaintenanceTimer" to="." method="_on_maintenance_tick"]
