[gd_scene load_steps=4 format=3 uid="uid://d0564djdkh2do"]

[ext_resource type="Script" path="res://structure.gd" id="1_34bv7"]
[ext_resource type="Texture2D" uid="uid://cddfbhrvw4mgx" path="res://assets/laserRed01.png" id="2_k3etx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fricf"]
radius = 16.0

[node name="structure" type="Node2D"]
script = ExtResource("1_34bv7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_k3etx")

[node name="BuildTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_fricf")

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]
radius = 16.0
affect_navigation_mesh = true
carve_navigation_mesh = true
avoidance_layers = 2

[connection signal="timeout" from="BuildTimer" to="." method="_on_build_timer_timeout"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
